# ohos_videostream_testing_project

./: .gitignore  README.md  RGB_FEATURE_README.md  enhanced_client.html  launch.bat  pom.xml  recv.h264  remote_desktop_demo  scrcpyoh_server  scrcpyoh_server_snap  scrcpyoh_server_virtual  simple_video_client.html  test.html  video_client.html
.github/: copilot-instructions.md
client/: hdc_communicator.py  image_receiver.py  main.py  test.py  uinput_executor.py
nalu_output/: nalu_0001_type7.h264  nalu_0002_type8.h264  nalu_0003_type5.h264
server/: BUILD.gn
server/include/: image_utils.h
server/src/: image_utils.cpp  ohscrcpy_virtual.cpp  scrcpyoh.cpp  video_source_screen.cpp
src/main/java/com/LaNasil/: H264Decoder.java  H264FrameAssembler.java  H264NaluSplitter.java  H264StreamReceiver.java  NetworkListener.java  VlcjExample.java
src/main/java/com/example/: H264NaluSplitter.java  H264StreamReceiver.java  NetworkListener.java  VlcjExample.java
