import("//build/ohos.gni")

## Build scrcpyoh {{{
config("scrcpyoh_config") {
  visibility = [ ":*" ]
  include_dirs = [ 
    "include",
  ]
}

ohos_executable("scrcpyoh_server") {
  install_enable = true
  configs = [
    ":scrcpyoh_config",
    "../resources/config/build:coverage_flags",
  ]
  
  sources = [ 
    "src/scrcpyoh.cpp", 
    "src/image_utils.cpp",
  ]


  deps = [
    "//foundation/window/window_manager/dm:libdm",
    "//third_party/libjpeg-turbo:turbojpeg_static",
    "//foundation/window/window_manager/utils:libwmutil",
  ]

  external_deps = [
    "c_utils:utils",
    "image_framework:image_native",
  ]

  part_name = "window_manager"
  subsystem_name = "window"
}


## Build scrcpyoh }}}